--- a/jekyll/_includes/equipe.html
+++ b/jekyll/_includes/equipe.html
@@ -1,3 +1,6 @@
+---
+---
+
 <!-- Two -->
 					<header class="special container" id="equipe">
 						<span class="icon solid fa-chart-bar"></span>
@@ -9,111 +12,67 @@
 							<div class="row">
 								<div class="col-4 col-12-narrower">
 
-									<section>
-										 <img src="images/equipe-esdras.jpg" alt="Rosto do Prof. Esdras L. Bispo Jr." class="image featured" style="width: 70%; margin-left: 15%;"/>
-										<header>
-											<h3>
-												<a href="http://lattes.cnpq.br/1022072289836952" target="_blank">
-													<img src="images/lattes.png" alt="Logo da Plataforma Lattes" style="width: 1em; display: inline;" /> 
-													Prof. Esdras Bispo Jr.
-												</a>
-											</h3>
-										</header>
-										<p>
-										Idealizador do Observatório. Pesquisador na área de Educação e Inteligência Artificial.</p>
-									</section>
+									{% include membro-equipe.html 
+										nome 	= 	"Prof. Esdras L. Bispo Jr."
+										short 	= 	"esdras"
+										lattes	= 	"http://lattes.cnpq.br/1022072289836952"
+										content	= "Idealizador do Observatório. Pesquisador na área de Educação e Inteligência Artificial"
+									%}
 
 								</div>
 								<div class="col-4 col-12-narrower">
 
-									<section >
-										 <img src="images/equipe-joslaine.png" alt="Rosto da Profa. Joslaine Jeske" 
-										 class="image featured" style="width: 70%; margin-left: 15%;"/>
-										<header>
-											<h3>
-												<a href=" http://lattes.cnpq.br/2394348610492496" target="_blank">
-													<img src="images/lattes.png" alt="Logo da Plataforma Lattes" style="width: 1em; display: inline;" /> 
-													Profª. Joslaine Freitas
-												</a>
-											</h3>
-										</header>
-										<p>
-										Coordenadora do Bacharelado em Ciências da Computação da UFJ. Pesquisadora na área de Inteligência Artificial.</p>
-									</section>
+									{% include membro-equipe.html 
+										nome 	= 	"Profa. Joslaine Jeske"
+										short 	= 	"joslaine"
+										lattes	= 	"http://lattes.cnpq.br/2394348610492496"
+										content	= "Coordenadora do Bacharelado em Ciências da Computação da UFJ. Pesquisadora na área de Inteligência Artificial."
+									%}
 
 								</div>
 
 								<div class="col-4 col-12-narrower">
 
-									<section >
-										 <img src="images/equipe-franciny.jpg" alt="Rosto da Profa. Franciny Medeiros" 
-										 class="image featured" style="width: 70%; margin-left: 15%;"/>
-										<header>
-											<h3>
-												<a href="http://lattes.cnpq.br/2821748091466181" target="_blank">
-													<img src="images/lattes.png" alt="Logo da Plataforma Lattes" style="width: 1em; display: inline;" /> 
-													Profª. Franciny Medeiros
-												</a>
-											</h3>
-										</header>
-										<p>
-										Responsável pela comunicação nas redes sociais. Pesquisadora na área de Engenharia de Software.</p>
-									</section>
+									{% include membro-equipe.html 
+										nome 	= 	"Profa. Franciny Medeiros"
+										short 	= 	"franciny"
+										lattes	= 	"http://lattes.cnpq.br/2821748091466181"
+										content	= 	"Responsável pela comunicação nas redes sociais. Pesquisadora na área de Engenharia de Software."
+									%}
 
 								</div>
 							</div>
 							<div class="row">
 								<div class="col-4 col-12-narrower">
 
-									<section>
-										 <img src="images/equipe-marcio.jpg" alt="Rosto do Prof. Márcio Lopes" class="image featured" style="width: 70%; margin-left: 15%;"/>
-										<header>
-											<h3>
-												<a href="http://lattes.cnpq.br/8846703586256426" target="_blank">
-													<img src="images/lattes.png" alt="Logo da Plataforma Lattes" style="width: 1em; display: inline;" />
-													Prof. Márcio Lopes
-												</a>
-											</h3>
-										</header>
-										<p>
-										Responsável pelos dados da cidade de Mineiros. Pesquisador na área de Computação em Névoa.</p>
-									</section>
+									{% include membro-equipe.html 
+										nome 	= 	"Prof. Márcio Lopes"
+										short 	= 	"marcio"
+										lattes	= 	"http://lattes.cnpq.br/8846703586256426"
+										content	= 	"Responsável pelos dados da cidade de Mineiros. Pesquisador na área de Computação em Névoa."
+									%}
 
 								</div>
 
 								<div class="col-4 col-12-narrower">
 
-									<section>
-										 <img src="images/equipe-marcelo.jpg" alt="Rosto do Prof. Marcelo Freitas" class="image featured" style="width: 70%; margin-left: 15%;"/>
-										<header>
-											<h3>
-												<a href="http://lattes.cnpq.br/0972390630476077" target="_blank">
-													<img src="images/lattes.png" alt="Logo da Plataforma Lattes" style="width: 1em; display: inline;" /> 
-													Prof. Marcelo Freitas
-												</a>
-											</h3>
-										</header>
-										<p>
-										Responsável pelas notícias dos avanços científicos em relação ao Covid-19. Pesquisa sobre Sistemas Operacionais.</p>
-									</section>
+									{% include membro-equipe.html 
+										nome 	= 	"Prof. Marcelo Freitas"
+										short 	= 	"marcelo"
+										lattes	= 	"http://lattes.cnpq.br/0972390630476077"
+										content	= 	"Responsável pelas notícias dos avanços científicos em relação ao Covid-19. Pesquisa sobre Sistemas Operacionais."
+									%}
 
 								</div>
 
 								<div class="col-4 col-12-narrower">
 
-									<section>
-										 <img src="images/equipe-zaqueu.jpg" alt="Rosto do Prof. Zaqueu Souza" class="image featured" style="width: 70%; margin-left: 15%;"/>
-										<header>
-											<h3>
-												<a href="lattes.cnpq.br/8132493439297747" target="_blank">
-													<img src="images/lattes.png" alt="Logo da Plataforma Lattes" style="width: 1em; display: inline;" /> 
-													Prof. Zaqueu Souza
-												</a>
-											</h3>
-										</header>
-										<p>
-										Responsável pelos dados da cidade de Mineiros. Professor de Engenharia Ambiental e Sanitária na Unifimes.</p>
-									</section>
+									{% include membro-equipe.html 
+										nome 	= 	"Prof. Zaqueu Souza"
+										short 	= 	"zaqueu"
+										lattes	= 	"http://lattes.cnpq.br/8132493439297747"
+										content	= 	"esponsável pelos dados da cidade de Mineiros. Professor de Engenharia Ambiental e Sanitária na Unifimes."
+									%}
 
 								</div>
 							</div>
