--- a/jekyll/_includes/graficos.html
+++ b/jekyll/_includes/graficos.html
@@ -3,10 +3,9 @@
 							<div class="row gtr-50">
 								<div class="col-4 col-10-narrower off-1-narrower imp-narrower col-8-mobile off-2-mobile">
 
-									<object data="images/mapa-jatai.svg" type="image/svg+xml" id="mapa-jatai" alt="Mapa da Cidade de Jataí" width= "160%" style="margin-left: -30%; margin-top: 30%;"></object>
+									<!--<object data="images/mapa-jatai.svg" type="image/svg+xml" id="mapa-jatai" alt="Mapa da Cidade de Jataí" width= "160%" style="margin-left: -30%; margin-top: 30%;"></object>-->
 
-									<!--<img src="images/mapa-jatai.svg" id="mapa-jatai" alt="Mapa da Cidade de Jataí" style="width: 160%; margin-left: -30%; margin-top: 30%;" />-->
-
+									<img src="images/mapa-jatai.svg" id="mapa-jatai" alt="Mapa da Cidade de Jataí"  style="width: 160%; margin-left: -30%; margin-top: 30%;" />
 								</div>
 
 								<div class="col-7 col-12-narrower" style="margin-left: 5%">
