--- a/jekyll/assets/css/main.css
+++ b/jekyll/assets/css/main.css
@@ -1960,6 +1960,15 @@ input, select, textarea {
 				.icon.circle.fa-google-plus-g:hover {
 					background: #df7b77;
 				}
+				
+			.icon.circle.fa-instagram {
+				background: #a669ce;
+				color: #fff;
+			}
+
+				.icon.circle.fa-instagram:hover {
+					background: #af78d3;
+				}
 
 			.icon.circle.fa-github {
 				background: #dcad8b;
