Atualização das responsabilidades da equipe.

--- a/jekyll/_includes/equipe.html
+++ b/jekyll/_includes/equipe.html
@@ -26,7 +26,7 @@
 										nome 	= 	"Profa. Joslaine Jeske"
 										short 	= 	"joslaine"
 										lattes	= 	"http://lattes.cnpq.br/2394348610492496"
-										content	= "Coordenadora do Bacharelado em Ciências da Computação da UFJ. Pesquisadora na área de Inteligência Artificial."
+										content	= "Responsável pelos dados da cidade de Rio Verde. Pesquisadora na área de Inteligência Artificial."
 									%}
 
 								</div>
@@ -37,7 +37,7 @@
 										nome 	= 	"Profa. Franciny Medeiros"
 										short 	= 	"franciny"
 										lattes	= 	"http://lattes.cnpq.br/2821748091466181"
-										content	= 	"Responsável pela comunicação nas redes sociais. Pesquisadora na área de Engenharia de Software."
+										content	= 	"Responsável pelos dados da cidade de Jataí e pela comunicação. Pesquisadora na área de Engenharia de Software."
 									%}
 
 								</div>
