Seção notícias criada (primeira versão).

--- a/jekyll/_includes/navbar.html
+++ b/jekyll/_includes/navbar.html
@@ -12,6 +12,7 @@
 									<li><a href="#grafico-mineiros">Mineiros</a></li>
 								</ul>
 							</li>
+							<li><a href="#noticias">Notícias</a></li>
 							<li><a href="#equipe">Equipe</a></li>
 							<li><a href="#cta">Colabore</a></li>
 						</ul>
