--- a/jekyll/_includes/noticias.html
+++ b/jekyll/_includes/noticias.html
@@ -1,42 +1,48 @@
-<header class="special container" id="equipe">
-							<span class="icon solid fa-newspaper"></span>
-							<h2>Notícias</h2>
-						</header>
+<header class="special container" id="noticias">
+	<span class="icon solid fa-newspaper"></span>
+	<h2>Notícias</h2>
+</header>
 
-					<section class="wrapper style1 container special">
-							<div class="row">
-								<div class="col-4 col-12-narrower">
+<section class="wrapper style1 container special">
+	<div class="row">
+		<div class="col-4 col-12-narrower">
 
-									<section>
-										<span class="icon solid featured fa-check"></span>
-										<header>
-											<h3>This is Something</h3>
-										</header>
-										<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
-									</section>
+			<section id="noticia01" class="noticia">
+				<a href="http://www.google.com" target="_blank">
+					<span class="icon solid featured"></span>
+					<header>
+						<h3>Also Something</h3>
+					</header>
+					<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
+				</a>
+			</section>	
+		
+		</div>
+		<div class="col-4 col-12-narrower">
 
-								</div>
-								<div class="col-4 col-12-narrower">
+			<section id="noticia02" class="noticia">
+				<a href="http://www.google.com" target="_blank">
+					<span class="icon solid featured"></span>
+					<header>
+						<h3>Also Something</h3>
+					</header>
+					<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
+				</a>
+			</section>
 
-									<section>
-										<span class="icon solid featured fa-check"></span>
-										<header>
-											<h3>Also Something</h3>
-										</header>
-										<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
-									</section>
+		</div>
+		<div class="col-4 col-12-narrower">
 
-								</div>
-								<div class="col-4 col-12-narrower">
+			<section id="noticia03" class="noticia">
+				<a href="http://www.google.com" target="_blank">
+					<span class="icon solid featured"></span>
+					<header>
+						<h3>Also Something</h3>
+					</header>
+					<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
+				</a>
+			</section>
 
-									<section>
-										<span class="icon solid featured fa-check"></span>
-										<header>
-											<h3>Probably Something</h3>
-										</header>
-										<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
-									</section>
-
-								</div>
-							</div>
-						</section>
+		</div>
+	</div>
+</section>
