Inclusão de um favicon.

--- a/jekyll/_includes/footer.html
+++ b/jekyll/_includes/footer.html
@@ -10,7 +10,8 @@
 					<ul class="copyright">
 						<li>Observatório UFJ Covid-19</li>
 						<li>Creative Commons</li>
-						<li>Design: <a href="http://html5up.net" target="_blank">HTML5 UP</a></li>
+						<li>Template: <a href="http://html5up.net" target="_blank">HTML5 UP</a></li>
+						<li>Ícones: <a href="https://www.flaticon.com/br/" title="Flaticon">Flaticon</a> (<a href="https://www.flaticon.com/br/autores/vitaly-gorbachev" title="Vitaly Gorbachev">Vitaly Gorbachev</a>)</li>
 					</ul>
 
 				</footer>
