Criação de páginas isoladas para cada seção.

--- a/jekyll/_includes/capa.html
+++ b/jekyll/_includes/capa.html
@@ -19,7 +19,7 @@
 						</p>
 						<footer>
 							<ul class="buttons stacked">
-								<li><a href="#main" class="button fit scrolly">Saiba mais...</a></li>
+								<li><a href="/sobre" class="button fit scrolly">Saiba mais...</a></li>
 							</ul>
 						</footer>
 
