--- a/jekyll/_includes/navbar.html
+++ b/jekyll/_includes/navbar.html
@@ -1,20 +1,58 @@
 <!-- Header -->
-				<header id="header" class="alt">
-					<h1 id="logo"><a href="index.html">{{ "Observatório" | downcase }}<span> UFJ Covid-19</span></a></h1>
-					<nav id="nav">
-						<ul>
-							<li class="current"><a href="index.html">Principal</a></li>
-							<li><a href="#main">Sobre</a></li>
-							<li class="submenu">
-								<a href="#">Gráficos</a>
-								<ul>
-									<li><a href="#grafico-jatai">Jataí</a></li>
-									<li><a href="#grafico-mineiros">Mineiros</a></li>
-								</ul>
-							</li>
-							<li><a href="#noticias">Notícias</a></li>
-							<li><a href="#equipe">Equipe</a></li>
-							<li><a href="#cta">Colabore</a></li>
-						</ul>
-					</nav>
-				</header>
+<header id="header" 
+	class="
+		{% if page.permalink == "/" %}
+		  alt
+		{% else %}
+		  reveal
+		{% endif %}
+	"
+>
+	<h1 id="logo"><a href="/">{{ "Observatório" | downcase }}<span> UFJ Covid-19</span></a></h1>
+	<nav id="nav">
+		<ul>
+			<li 
+				class="
+					{% if page.permalink == "/" %}
+					  current
+					{% endif %}
+				"
+			><a href="/">Principal</a></li>
+			<li 
+				class="
+					{% if page.permalink == "/sobre" %}
+					  current
+					{% endif %}
+				"
+			><a href="/sobre">Sobre</a></li>
+			<li 
+				class="
+					{% if page.permalink == "/graficos" %}
+					  current
+					{% endif %}
+				"
+			><a href="/graficos">Gráficos</a></li>
+			<li 
+				class="
+					{% if page.permalink == "/noticias" %}
+					  current
+					{% endif %}
+				"
+			><a href="/noticias">Notícias</a></li>
+			<li 
+				class="
+					{% if page.permalink == "/equipe" %}
+					  current
+					{% endif %}
+				"
+			><a href="/equipe">Equipe</a></li>
+			<li 
+				class="
+					{% if page.permalink == "/colabore" %}
+					  current
+					{% endif %}
+				"
+			><a href="/colabore">Colabore</a></li>
+		</ul>
+	</nav>
+</header>
