--- a/jekyll/_layouts/pagina.html
+++ b/jekyll/_layouts/pagina.html
@@ -1,6 +1,3 @@
----
-title: Observatório UFJ Covid-19
----
 <!DOCTYPE HTML>
 <html>
 
@@ -10,19 +7,14 @@ title: Observatório UFJ Covid-19
 		<div id="page-wrapper">
 
 			{% include navbar.html %}
-			{% include capa.html %}
 
 			<!-- Main -->
 				<article id="main">
 
-					{% include sobre.html %}
-					{% include graficos.html %}
-					{% include noticias.html %}
-					{% include equipe.html %}
+					{{ content }}
 
 				</article>
 			
-			{% include colabore.html %}	
 			{% include footer.html %}
 
 		</div>
