--- a/jekyll/_includes/scripts.html
+++ b/jekyll/_includes/scripts.html
@@ -10,6 +10,7 @@
 <script src="{{ site.baseurl }}/assets/js/main.js"></script>
 <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 <script src="{{ site.baseurl }}/assets/js/noticias.js"></script>
+<script src="{{ site.baseurl }}/assets/js/graficos/moment.js"></script>
 <script src="{{ site.baseurl }}/assets/js/graficos/buildChart.js"></script>
 <script src="{{ site.baseurl }}/assets/js/graficos/principal.js"></script>
 
