--- a/jekyll/_includes/scripts.html
+++ b/jekyll/_includes/scripts.html
@@ -8,9 +8,25 @@
 <script src="{{ site.baseurl }}/assets/js/breakpoints.min.js"></script>
 <script src="{{ site.baseurl }}/assets/js/util.js"></script>
 <script src="{{ site.baseurl }}/assets/js/main.js"></script>
-<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-<script src="{{ site.baseurl }}/assets/js/noticias.js"></script>
-<script src="{{ site.baseurl }}/assets/js/graficos/moment.js"></script>
-<script src="{{ site.baseurl }}/assets/js/graficos/buildChart.js"></script>
-<script src="{{ site.baseurl }}/assets/js/graficos/principal.js"></script>
+
+{% case page.script %}
+  {% when "graficos-geral" %}
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script src="{{ site.baseurl }}/assets/js/graficos/buildChart.js"></script>
+	<script src="{{ site.baseurl }}/assets/js/graficos/geral.js"></script>
+  {% when "graficos-jatai" %}
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script src="{{ site.baseurl }}/assets/js/graficos/buildChart.js"></script>
+	<script src="{{ site.baseurl }}/assets/js/graficos/jatai.js"></script>
+  {% when "graficos-mineiros" %}
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script src="{{ site.baseurl }}/assets/js/graficos/buildChart.js"></script>
+	<script src="{{ site.baseurl }}/assets/js/graficos/mineiros.js"></script>
+  {% when "noticias" %}
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script src="{{ site.baseurl }}/assets/js/noticias.js"></script>
+{% endcase %}
+
+
+
 
