--- a/jekyll/_includes/scripts.html
+++ b/jekyll/_includes/scripts.html
@@ -21,7 +21,11 @@
   {% when "graficos-mineiros" %}
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script src="{{ site.baseurl }}/assets/js/graficos/buildChart.js"></script>
-	<script src="{{ site.baseurl }}/assets/js/graficos/mineiros.js"></script>
+	 <script src="{{ site.baseurl }}/assets/js/graficos/mineiros.js"></script>
+  {% when "graficos-rioverde" %}
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script src="{{ site.baseurl }}/assets/js/graficos/buildChart.js"></script>
+    <script src="{{ site.baseurl }}/assets/js/graficos/rioverde.js"></script>
   {% when "noticias" %}
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script src="{{ site.baseurl }}/assets/js/noticias.js"></script>
