Correção do endereço do thumbnail
Agora com o endereço absoluto.

--- a/jekyll/_includes/head.html
+++ b/jekyll/_includes/head.html
@@ -11,7 +11,7 @@
 
 
 		<title>{{ page.title }}</title>
-		<meta property="og:image" content="images/thumbnail.png" />
+		<meta property="og:image" content="{{ site.baseurl }}/assets/images/thumbnail.png" />
 		<meta property="og:type" content="website" />
 		<meta property="og:url" content="http://www.deolhonocorona.com" />
 		<meta property="og:title" content="Observatório UFJ Covid-19" />
