Adaptação da página index para o Bootstrap.

--- a/jekyll/_includes/capa.html
+++ b/jekyll/_includes/capa.html
@@ -1,16 +1,30 @@
-<!-- Banner -->
-				<section id="banner">
+<div class="container text-center">
+	<!--<h1 class="display-4 text-center">Observatório <br>UFJ COVID-19</h1>-->
+	
+	<img 
+		src="{{ site.baseurl }}/assets/images/logomarca-observatorio.svg" 
+		width="100%" alt="Logomarca do Observatório UFJ Covid-19"
+		style="background-color: rgba(0, 0, 0, 0.5);"
+	>
+	
+	<p 
+		class="lead text-center" 
+		style="background-color: rgba(0, 0, 0, 0.5); color: white; font-size: 2vw;"
+	>
+		Este <strong>observatório</strong> é uma iniciativa do <br>
+		Bacharelado em Ciência da Computação (BCC) <br>
+		da Universidade Federal de Jataí (UFJ).
+	</p>
+</div>
 
-					<!--
-						".inner" is set up as an inline-block so it automatically expands
-						in both directions to fit whatever's inside it. This means it won't
-						automatically wrap lines, so be sure to use line breaks where
-						appropriate (<br />).
-					-->
+
+
+<!-- Banner 
+				<section id="banner">
 					<div class="inner">
 
 						<header>
-							<h2>Observatório <br>UFJ COVID-19</h2>
+							<h2></h2>
 						</header>
 						<p>
 							Este <strong>observatório</strong> é uma iniciativa do <br>
@@ -19,10 +33,10 @@
 						</p>
 						<footer>
 							<ul class="buttons stacked">
-								<li><a href="/sobre" class="button fit scrolly">Saiba mais...</a></li>
+								<li>
 							</ul>
 						</footer>
 
 					</div>
 
-				</section>
+				</section>-->
