--- a/jekyll/_includes/navbar.html
+++ b/jekyll/_includes/navbar.html
@@ -1,23 +1,60 @@
-<!-- Header -->
-<header id="header" 
-	class="
-		{% if page.permalink == "/" %}
-		  alt
-		{% else %}
-		  reveal
-		{% endif %}
-	"
->
-	<h1 id="logo"><a href="/">{{ "Observatório" | downcase }}<span> UFJ Covid-19</span></a></h1>
-	<nav id="nav">
-		<ul>
-			<li 
-				class="
-					{% if page.permalink == "/" %}
-					  current
-					{% endif %}
-				"
-			><a href="/">Principal</a></li>
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
+	<a class="navbar-brand" href="/">
+		<img src="{{ site.baseurl }}/assets/images/logo-navbar.svg" width="30" height="30" class="d-inline-block align-top" alt="">
+		Observatório UFJ Covid-19
+	</a>
+  	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+    	<span class="navbar-toggler-icon"></span>
+  	</button>
+
+  	<div class="collapse navbar-collapse" id="navbarColor01">
+    	<ul class="navbar-nav ml-5">
+      		<li class="nav-item {% if page.permalink == "/" %} active {% endif %}">
+        		<a class="nav-link" href="/">Principal</a>
+      		</li>
+      		<li class="nav-item dropdown">
+		        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownGraficos" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+		        	Gráficos
+		        </a>
+		        <div class="dropdown-menu" aria-labelledby="navbarDropdownGraficos">
+		        	<a class="dropdown-item" href="/graficos/jatai">Jataí</a>
+		          	<a class="dropdown-item" href="/graficos/mineiros">Mineiros</a>
+		          	<a class="dropdown-item" href="/graficos/rioverde">Rio Verde</a>
+		          	<div class="dropdown-divider"></div>
+		          	<a class="dropdown-item" href="/graficos/como-sao-criados">Como são criados os gráficos?</a>
+		        </div>
+      		</li>
+      		<li class="nav-item dropdown">
+		        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownProjecoes" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+		        	Projeções
+		        </a>
+		        <div class="dropdown-menu" aria-labelledby="navbarDropdownProjecoes">
+		        	<a class="dropdown-item" href="/projecoes/jatai">Jataí</a>
+		          	<a class="dropdown-item" href="/projecoes/rioverde">Rio Verde</a>
+		          	<div class="dropdown-divider"></div>
+		          	<a class="dropdown-item" href="/projecoes/como-sao-feitas">Como são feitas as projeções?</a>
+		        </div>
+      		</li>
+      		<li class="nav-item {% if page.permalink == "/noticias" %} active {% endif %}">
+        		<a class="nav-link" href="/noticias">Notícias</a>
+      		</li>
+      		<li class="nav-item dropdown">
+		        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownConhecaMais" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+		        	Sobre
+		        </a>
+		        <div class="dropdown-menu" aria-labelledby="navbarDropdownConhecaMais">
+		        	<a class="dropdown-item" href="/sobre">Sobre o projeto</a>
+		          	<a class="dropdown-item" href="/equipe">Equipe</a>
+		          	<a class="dropdown-item" href="/na-midia">Na mídia</a>
+		          	<a class="dropdown-item" href="/colabore">Colabore</a>
+		          	<a class="dropdown-item" href="/creditos">Créditos</a>
+		        </div>
+      		</li>
+      	</ul>
+	</div>
+</nav>
+
+<!-- 
 			<li 
 				class="
 					{% if page.permalink == "/sobre" %}
@@ -61,4 +98,4 @@
 			><a href="/colabore">Colabore</a></li>
 		</ul>
 	</nav>
-</header>
+</header>-->
