--- a/jekyll/_includes/scripts.html
+++ b/jekyll/_includes/scripts.html
@@ -1,13 +1,19 @@
 <!-- Scripts -->
-
-<script src="{{ site.baseurl }}/assets/js/jquery/jquery.min.js"></script>
-<script src="{{ site.baseurl }}/assets/js/jquery/jquery.dropotron.min.js"></script>
-<script src="{{ site.baseurl }}/assets/js/jquery/jquery.scrolly.min.js"></script>
-<script src="{{ site.baseurl }}/assets/js/jquery/jquery.scrollex.min.js"></script>
-<script src="{{ site.baseurl }}/assets/js/browser.min.js"></script>
-<script src="{{ site.baseurl }}/assets/js/breakpoints.min.js"></script>
-<script src="{{ site.baseurl }}/assets/js/util.js"></script>
-<script src="{{ site.baseurl }}/assets/js/main.js"></script>
+<script 
+  src="https://code.jquery.com/jquery-3.4.1.slim.min.js" 
+  integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" 
+  crossorigin="anonymous">
+</script>
+<script 
+  src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" 
+  integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" 
+  crossorigin="anonymous">  
+</script>
+<script 
+  src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" 
+  integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" 
+  crossorigin="anonymous">
+</script>
 
 {% case page.script %}
   {% when "graficos-geral" %}
