--- a/jekyll/_includes/capa.html
+++ b/jekyll/_includes/capa.html
@@ -4,12 +4,12 @@
 	<img 
 		src="{{ site.baseurl }}/assets/images/logomarca-observatorio.svg" 
 		width="100%" alt="Logomarca do Observatório UFJ Covid-19"
-		style="background-color: rgba(0, 0, 0, 0.5);"
+		style="background-color: rgba(0, 0, 0, 0.7);"
 	>
 	
 	<p 
-		class="lead text-center" 
-		style="background-color: rgba(0, 0, 0, 0.5); color: white; font-size: 2vw;"
+		class="lead text-center pb-2 pt-2 ml-5 mr-5" 
+		style="background-color: rgba(0, 0, 0, 0.6); color: white; font-size: 2vw;"
 	>
 		Este <strong>observatório</strong> é uma iniciativa do <br>
 		Bacharelado em Ciência da Computação (BCC) <br>
