Adicionando bootstrap e responsidades cards

--- a/jekyll/_includes/card-estatistica.html
+++ b/jekyll/_includes/card-estatistica.html
@@ -1,11 +1,10 @@
-<div style="margin: 0 0 0 0; margin-left: 0.5%; margin-right: 0.5%; padding: 1%; padding-bottom: 0.5%; border: 0 0 0 0; background: {{ include.cor }}; text-align: center;">
+<div  class="m-2 card col-cards" style=" background: {{ include.cor }}; text-align: center;">
 	<div 
-		style="margin: 0 0 0 0; padding: 10% 0 10% 0; border: 0 0 0 0; 
-				font-size: 4vw; text-align: center; font-family: 'Lato', sans-serif;">
+		class="fonte-card-numeral">
 		<strong>{{ include.numero }}</strong>
 	</div>
-	<div style="margin: 0 0 0 0; padding: 0 0 0 0 ; border: 0 0 0 0;
-				font-size: 1.3vw; text-align: center; font-family: 'Lato', sans-serif;">
+	<div class="fonte-card-texto" style="margin: 0 0 0 0; padding: 0 0 0 0 ; border: 0 0 0 0;
+	font-size: 1.3vw; text-align: center; font-family: 'Lato', sans-serif;">
 		{{ include.categoria }}
 	</div>
 </div>
