--- a/jekyll/_includes/head.html
+++ b/jekyll/_includes/head.html
@@ -20,7 +20,10 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css" />
+		<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/bootstrap.css" />
+		<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/custom.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	
 
 		<link rel="apple-touch-icon" sizes="57x57" href="{{ site.baseurl }}/assets/images/favicon/apple-icon-57x57.png">
 		<link rel="apple-touch-icon" sizes="60x60" href="{{ site.baseurl }}/assets/images/favicon/apple-icon-60x60.png">
