Criação de estrutura para receber o JSON.

--- a/jekyll/_includes/scripts.html
+++ b/jekyll/_includes/scripts.html
@@ -26,6 +26,10 @@
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script src="{{ site.baseurl }}/assets/js/graficos/buildChart.js"></script>
     <script src="{{ site.baseurl }}/assets/js/graficos/rioverde.js"></script>
+  {% when "tendencias" %}
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script src="{{ site.baseurl }}/assets/js/tendencias/buildProjection.js"></script>
+    <script src="{{ site.baseurl }}/assets/js/tendencias/geral.js"></script>
   {% when "noticias" %}
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script src="{{ site.baseurl }}/assets/js/noticias.js"></script>
