--- a/jekyll/_includes/footer.html
+++ b/jekyll/_includes/footer.html
@@ -23,7 +23,7 @@
       <hr class="clearfix w-100 d-md-none pb-3">
 
       <!-- Grid column -->
-      <div class="col-md-2 mb-md-0 mb-3">
+      <div class="col-md-2 col-6 mb-md-0 mb-3">
 
         <!-- Links -->
         <h5 class="text-uppercase">Principal</h5>
@@ -47,7 +47,7 @@
       <!-- Grid column -->
 
       <!-- Grid column -->
-      <div class="col-md-2 mb-md-0 mb-3">
+      <div class="col-md-2 col-6 mb-md-0 mb-3">
 
         <!-- Links -->
         <h5 class="text-uppercase">Gráficos</h5>
@@ -71,7 +71,7 @@
       <!-- Grid column -->
 
       <!-- Grid column -->
-      <div class="col-md-2 mb-md-0 mb-3">
+      <div class="col-md-2 col-6 mb-md-0 mb-3">
 
         <!-- Links -->
         <h5 class="text-uppercase">Tendências</h5>
@@ -95,7 +95,7 @@
       <!-- Grid column -->
 
       <!-- Grid column -->
-      <div class="col-md-2 mb-md-0 mb-3">
+      <div class="col-md-2 col-6 mb-md-0 mb-3">
 
         <!-- Links -->
         <h5 class="text-uppercase">Sobre</h5>
