--- a/jekyll/_includes/head.html
+++ b/jekyll/_includes/head.html
@@ -20,8 +20,9 @@
 		<meta charset="utf-8">
     	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		
-		<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/bootstrap-cosmo.css" />
+		<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/bootstrap-cosmo.css" />		
 		<link rel="stylesheet" href="{{ site.baseurl }}/assets/bibliotecas/fontawesome-5.13.0/css/all.css" />
+		<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css" />
 
 		<link rel="apple-touch-icon" sizes="57x57" href="{{ site.baseurl }}/assets/images/favicon/apple-icon-57x57.png">
 		<link rel="apple-touch-icon" sizes="60x60" href="{{ site.baseurl }}/assets/images/favicon/apple-icon-60x60.png">
