--- a/jekyll/_layouts/pagina.html
+++ b/jekyll/_layouts/pagina.html
@@ -3,9 +3,8 @@
 
 	{% include head.html %}
 
-	<body 
-		style="
-			padding-top: 7%; 
+	<body class = "pt-5"
+		style=" 
 			background-image: url('{{ site.baseurl}}/assets/images/banner.jpg');
 			background-repeat: no-repeat;
 			background-attachment: fixed;
@@ -14,15 +13,15 @@
 		
 		{% include navbar.html %}
 
-		<div class="container">
+		<div class="container pt-4">
   			<div class="row">
-    			<div class="col"></div>
-    			<div class="col-8">
+    			<div class="col-lg col-sm"></div>
+    			<div class="col-lg-8 col-sm-10">
       				
       				{{ content }}
 
     			</div>
-			    <div class="col"></div>
+			    <div class="col-lg col-sm"></div>
   			</div>
 		</div>
 
