Modularização das páginas de gráficos
- E algumas correções

--- a/jekyll/_includes/navbar.html
+++ b/jekyll/_includes/navbar.html
@@ -19,7 +19,7 @@
 		        <div class="dropdown-menu" aria-labelledby="navbarDropdownGraficos">
 		        	<a class="dropdown-item" href="/graficos/jatai">Jataí</a>
 		          	<a class="dropdown-item" href="/graficos/mineiros">Mineiros</a>
-		          	<a class="dropdown-item" href="/graficos/rioverde">Rio Verde</a>
+		          	<a class="dropdown-item" href="/graficos/rio-verde">Rio Verde</a>
 		          	<div class="dropdown-divider"></div>
 		          	<a class="dropdown-item" href="/graficos/como-sao-criados">Como são criados os gráficos?</a>
 		        </div>
@@ -53,49 +53,3 @@
       	</ul>
 	</div>
 </nav>
-
-<!-- 
-			<li 
-				class="
-					{% if page.permalink == "/sobre" %}
-					  current
-					{% endif %}
-				"
-			><a href="/sobre">Sobre</a></li>
-			<li 
-				class="
-					{% if page.grupo == "graficos" %}
-					  current
-					{% endif %}					
-			submenu"><a href="/graficos">Gráficos</a>
-				<ul>
-					<li><a href="/graficos/jatai">Jataí</a></li>
-					<li><a href="/graficos/mineiros">Mineiros</a></li>
-					<li><a href="/graficos/rio-verde">Rio Verde</a></li>
-				</ul>
-			</li>
-			
-			<li 
-				class="
-					{% if page.permalink == "/noticias" %}
-					  current
-					{% endif %}
-				"
-			><a href="/noticias">Notícias</a></li>
-			<li 
-				class="
-					{% if page.permalink == "/equipe" %}
-					  current
-					{% endif %}
-				"
-			><a href="/equipe">Equipe</a></li>
-			<li 
-				class="
-					{% if page.permalink == "/colabore" %}
-					  current
-					{% endif %}
-				"
-			><a href="/colabore">Colabore</a></li>
-		</ul>
-	</nav>
-</header>-->
