Correção dos links.

--- a/jekyll/_includes/footer.html
+++ b/jekyll/_includes/footer.html
@@ -30,16 +30,16 @@
 
         <ul class="list-unstyled">
           <li>
-            <a href="#!">Gráficos</a>
+            <a href="/graficos/como-sao-criados">Gráficos</a>
           </li>
           <li>
-            <a href="#!">Projeções</a>
+            <a href="/tendencias/como-sao-criadas">Tendências</a>
           </li>
           <li>
-            <a href="#!">Notícias</a>
+            <a href="/noticias">Notícias</a>
           </li>
           <li>
-            <a href="#!">Sobre</a>
+            <a href="/sobre">Sobre</a>
           </li>
         </ul>
 
@@ -54,16 +54,16 @@
 
         <ul class="list-unstyled">
           <li>
-            <a href="#!">Jataí</a>
+            <a href="/graficos/jatai">Jataí</a>
           </li>
           <li>
-            <a href="#!">Mineiros</a>
+            <a href="/graficos/mineiros">Mineiros</a>
           </li>
           <li>
-            <a href="#!">Rio Verde</a>
+            <a href="/graficos/rio-verde">Rio Verde</a>
           </li>
           <li>
-            <a href="#!">Como são criados?</a>
+            <a href="/graficos/como-sao-criados">Como são criados?</a>
           </li>
         </ul>
 
@@ -78,16 +78,16 @@
 
         <ul class="list-unstyled">
           <li>
-            <a href="#!">Jataí</a>
+            <a href="/tendencias/jatai">Jataí</a>
           </li>
           <li>
-            <a href="#!">Mineiros</a>
+            <a href="/tendencias/mineiros">Mineiros</a>
           </li>
           <li>
-            <a href="#!">Rio Verde</a>
+            <a href="/tendencias/rio-verde">Rio Verde</a>
           </li>
           <li>
-            <a href="#!">Como são criadas?</a>
+            <a href="/tendencias/como-sao-criadas">Como são criadas?</a>
           </li>
         </ul>
 
@@ -102,19 +102,19 @@
 
         <ul class="list-unstyled">
           <li>
-            <a href="#!">Sobre o projeto</a>
+            <a href="/sobre">O Projeto</a>
           </li>
           <li>
-            <a href="#!">Equipe</a>
+            <a href="/equipe">Equipe</a>
           </li>
           <li>
-            <a href="#!">Na mídia</a>
+            <a href="/na-midia">Na mídia</a>
           </li>
           <li>
-            <a href="#!">Colabore</a>
+            <a href="/colabore">Colabore</a>
           </li>
           <li>
-            <a href="#!">Créditos</a>
+            <a href="/creditos">Créditos</a>
           </li>
         </ul>
 
