--- a/jekyll/_includes/navbar.html
+++ b/jekyll/_includes/navbar.html
@@ -21,18 +21,18 @@
 		          	<a class="dropdown-item" href="/graficos/mineiros">Mineiros</a>
 		          	<a class="dropdown-item" href="/graficos/rio-verde">Rio Verde</a>
 		          	<div class="dropdown-divider"></div>
-		          	<a class="dropdown-item" href="/graficos/como-sao-criados">Como são criados os gráficos?</a>
+		          	<a class="dropdown-item" href="/graficos/como-sao-criados">Como são criados?</a>
 		        </div>
       		</li>
       		<li class="nav-item dropdown">
-		        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownProjecoes" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-		        	Projeções
+		        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownTendencias" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+		        	Tendências
 		        </a>
-		        <div class="dropdown-menu" aria-labelledby="navbarDropdownProjecoes">
-		        	<a class="dropdown-item" href="/projecoes/jatai">Jataí</a>
-		          	<a class="dropdown-item" href="/projecoes/rioverde">Rio Verde</a>
+		        <div class="dropdown-menu" aria-labelledby="navbarDropdownTendencias">
+		        	<a class="dropdown-item" href="/tendencias/jatai">Jataí</a>
+		          	<a class="dropdown-item" href="/tendencias/rioverde">Rio Verde</a>
 		          	<div class="dropdown-divider"></div>
-		          	<a class="dropdown-item" href="/projecoes/como-sao-feitas">Como são feitas as projeções?</a>
+		          	<a class="dropdown-item" href="/tendencias/como-sao-feitas">Como são criadas?</a>
 		        </div>
       		</li>
       		<li class="nav-item {% if page.permalink == "/noticias" %} active {% endif %}">
@@ -43,7 +43,7 @@
 		        	Sobre
 		        </a>
 		        <div class="dropdown-menu" aria-labelledby="navbarDropdownConhecaMais">
-		        	<a class="dropdown-item" href="/sobre">Sobre o projeto</a>
+		        	<a class="dropdown-item" href="/sobre">O Projeto</a>
 		          	<a class="dropdown-item" href="/equipe">Equipe</a>
 		          	<a class="dropdown-item" href="/na-midia">Na mídia</a>
 		          	<a class="dropdown-item" href="/colabore">Colabore</a>
