Adaptação e criação de várias páginas.

--- a/jekyll/_includes/navbar.html
+++ b/jekyll/_includes/navbar.html
@@ -13,7 +13,7 @@
         		<a class="nav-link" href="/">Principal</a>
       		</li>
       		<li class="nav-item dropdown">
-		        <a class="nav-link dropdown-toggle mr-2 {% if page.grupo == "graficos" %} active {% endif %}" href="#" id="navbarDropdownGraficos" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+		        <a class="nav-link dropdown-toggle mr-2 {% if page.navbar == "graficos" %} active {% endif %}" href="#" id="navbarDropdownGraficos" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 		        	Gráficos
 		        </a>
 		        <div class="dropdown-menu" aria-labelledby="navbarDropdownGraficos">
@@ -25,7 +25,7 @@
 		        </div>
       		</li>
       		<li class="nav-item dropdown">
-		        <a class="nav-link dropdown-toggle mr-2 {% if page.grupo == "tendencias" %} active {% endif %}" href="#" id="navbarDropdownTendencias" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+		        <a class="nav-link dropdown-toggle mr-2 {% if page.navbar == "tendencias" %} active {% endif %}" href="#" id="navbarDropdownTendencias" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 		        	Tendências
 		        </a>
 		        <div class="dropdown-menu" aria-labelledby="navbarDropdownTendencias">
@@ -39,7 +39,7 @@
         		<a class="nav-link" href="/noticias">Notícias</a>
       		</li>
       		<li class="nav-item dropdown">
-		        <a class="nav-link dropdown-toggle mr-2 " href="#" id="navbarDropdownConhecaMais" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+		        <a class="nav-link dropdown-toggle mr-2 {% if page.navbar == "sobre" %} active {% endif %}" href="#" id="navbarDropdownConhecaMais" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 		        	Sobre
 		        </a>
 		        <div class="dropdown-menu" aria-labelledby="navbarDropdownConhecaMais">
