--- a/jekyll/_includes/scripts.html
+++ b/jekyll/_includes/scripts.html
@@ -42,6 +42,8 @@
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script src="{{ site.baseurl }}/assets/js/tendencias/buildProjection.js"></script>
     <script src="{{ site.baseurl }}/assets/js/tendencias/rioverde.js"></script>
+  {% when "na-midia" %}
+    <script src="{{ site.baseurl }}/assets/js/main.js"></script>
 {% endcase %}
 
 
