Ajustando altura dos cards para varios dispositivos

--- a/jekyll/_includes/card-estatistica.html
+++ b/jekyll/_includes/card-estatistica.html
@@ -4,7 +4,7 @@
 		<strong>{{ include.numero }}</strong>
 	</div>
 	<div class="fonte-card-texto" style="margin: 0 0 0 0; padding: 0 0 0 0 ; border: 0 0 0 0;
-	font-size: 1.3vw; text-align: center; font-family: 'Lato', sans-serif;">
+	 text-align: center; font-family: 'Lato', sans-serif;">
 		{{ include.categoria }}
 	</div>
 </div>
