Adaptação da página Equipe

--- a/jekyll/_includes/footer.html
+++ b/jekyll/_includes/footer.html
@@ -98,11 +98,11 @@
       <div class="col-md-2 col-6 mb-md-0 mb-3">
 
         <!-- Links -->
-        <h5 class="text-uppercase">Sobre</h5>
+        <h5 class="text-uppercase">Saiba mais</h5>
 
         <ul class="list-unstyled">
           <li>
-            <a href="/sobre">O Projeto</a>
+            <a href="/sobre">Sobre</a>
           </li>
           <li>
             <a href="/equipe">Equipe</a>
