--- a/jekyll/_includes/navbar.html
+++ b/jekyll/_includes/navbar.html
@@ -40,10 +40,10 @@
       		</li>
       		<li class="nav-item dropdown">
 		        <a class="nav-link dropdown-toggle mr-2 {% if page.navbar == "sobre" %} active {% endif %}" href="#" id="navbarDropdownConhecaMais" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-		        	Sobre
+		        	Saiba mais
 		        </a>
 		        <div class="dropdown-menu" aria-labelledby="navbarDropdownConhecaMais">
-		        	<a class="dropdown-item" href="/sobre">O Projeto</a>
+		        	<a class="dropdown-item" href="/sobre">Sobre</a>
 		          	<a class="dropdown-item" href="/equipe">Equipe</a>
 		          	<a class="dropdown-item" href="/na-midia">Na mídia</a>
 		          	<a class="dropdown-item" href="/colabore">Colabore</a>
