--- a/jekyll/_includes/membro-equipe.html
+++ b/jekyll/_includes/membro-equipe.html
@@ -1,39 +1,44 @@
-<section>
-	 <img src="{{ site.baseurl}}/assets/images/equipe-{{ include.short }}.jpg" alt="Rosto - {{ include.nome }}" class="image featured" style="width: 70%; margin-left: 15%;"/>
-	<header>
-		<h3>
-			<a href="{{include.url}}" target="_blank">
-				{% case include.plataforma %}
-					{% when "Lattes" %}
-						<img 
-							src="{{ site.baseurl}}/assets/images/lattes.png" 
-							alt="Logo da Plataforma Lattes" 
-							style="width: 1em; display: inline;" 
-						/> 
-					{% when "LinkedIn" %}
-						<img 
-							src="{{ site.baseurl}}/assets/images/linkedin.svg" 
-							alt="Logo do LinkedIn" 
-							style="width: 1em; display: inline;" 
-						/>
-					{% when "Facebook" %}
-						<img 
-							src="{{ site.baseurl}}/assets/images/facebook.svg" 
-							alt="Logo do Facebook" 
-							style="width: 1em; display: inline;" 
-						/> 
-					{% when "Link" %}
-						<img 
-							src="{{ site.baseurl}}/assets/images/link.svg" 
-							alt="Link de uma página" 
-							style="width: 1em; display: inline;" 
-						/>
-				{% endcase %}
-				{{ include.nome }}
-			</a>
-		</h3>
-	</header>
-	<p>
-		{{ include.content }}
-	</p>
-</section>
+<div class="col-lg-4 col-md-6 pb-4">
+
+	<div class="card h-100">
+		<img src="{{ site.baseurl}}/assets/images/equipe-{{ include.short }}.jpg" class="card-img-top rounded-circle w-75 mx-auto py-2" alt="Rosto - {{ include.nome }}">
+		<div class="card-body">
+			<h5 class="card-title text-center">
+				<a href="{{include.url}}" target="_blank" class="text-uppercase">
+					{% case include.plataforma %}
+						{% when "Lattes" %}
+							<img 
+								src="{{ site.baseurl}}/assets/images/lattes.png" 
+								alt="Logo da Plataforma Lattes" 
+								style="width: 1em; display: inline;" 
+							/> 
+						{% when "LinkedIn" %}
+							<img 
+								src="{{ site.baseurl}}/assets/images/linkedin.svg" 
+								alt="Logo do LinkedIn" 
+								style="width: 1em; display: inline;" 
+							/>
+						{% when "Facebook" %}
+							<img 
+								src="{{ site.baseurl}}/assets/images/facebook.svg" 
+								alt="Logo do Facebook" 
+								style="width: 1em; display: inline;" 
+							/> 
+						{% when "Link" %}
+							<img 
+								src="{{ site.baseurl}}/assets/images/link.svg" 
+								alt="Link de uma página" 
+								style="width: 1em; display: inline;" 
+							/>
+					{% endcase %}
+					{{ include.nome }}
+				</a>
+			</h5>
+		<p class="card-text lead text-center">
+			{{ include.content }}
+		</p>
+		
+		</div>
+	</div>
+
+</div>
