--- a/jekyll/_layouts/pagina.html
+++ b/jekyll/_layouts/pagina.html
@@ -21,6 +21,8 @@
     					<div class="col-lg-8 col-sm-10">
   					{% when "graficos" %}
     					<div class="col-lg-12 col-sm-12 col-md-10">
+					{% when "equipe" %}
+						<div class="col-lg-12 col-sm-12 col-md-12">
     			{% endcase %}
       				
       				{{ content }}
