--- a/jekyll/assets/css/main.css
+++ b/jekyll/assets/css/main.css
@@ -32,3 +32,31 @@
 #navbarColor01{
 	font-size: 16px;
 }
+
+/* estilos cards estatisticos */
+@media (min-width: 1900px) {
+	.col-md{
+		-webkit-box-flex: 0!important;
+			-ms-flex: 0 0 20%!important;
+				flex: 0 0 20%!important;
+		max-width: 20%!important;
+	}
+}
+
+.card {
+    border-radius: 4px;
+    /* border: 1px solid #cccccc;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-sizing: border-box; */
+    transition: all linear 200ms; 
+    
+}
+.card:hover {
+    transform: scale(1.1);
+    transition: all linear 200ms;
+    z-index: 1;
+    box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.3);
+    cursor: pointer;
+}
