--- a/jekyll/_includes/navbar.html
+++ b/jekyll/_includes/navbar.html
@@ -31,13 +31,13 @@
 		        <div class="dropdown-menu" aria-labelledby="navbarDropdownTendencias">
 		        	<a class="dropdown-item" href="/tendencias/jatai">Jataí</a>
 		          	<a class="dropdown-item" href="/tendencias/rio-verde">Rio Verde</a>
-		          	<div class="dropdown-divider"></div>
-		          	<a class="dropdown-item" href="/tendencias/como-sao-feitas">Como são criadas?</a>
+		          	<!--<div class="dropdown-divider"></div>
+		          	<a class="dropdown-item" href="/tendencias/como-sao-feitas">Como são criadas?</a>-->
 		        </div>
       		</li>
-      		<li class="nav-item mr-2 {% if page.permalink == "/noticias" %} active {% endif %}">
+      		<!--<li class="nav-item mr-2 {% if page.permalink == "/noticias" %} active {% endif %}">
         		<a class="nav-link" href="/noticias">Notícias</a>
-      		</li>
+      		</li>-->
       		<li class="nav-item dropdown">
 		        <a class="nav-link dropdown-toggle mr-2 {% if page.navbar == "sobre" %} active {% endif %}" href="#" id="navbarDropdownConhecaMais" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 		        	Saiba mais
@@ -47,7 +47,7 @@
 		          	<a class="dropdown-item" href="/equipe">Equipe</a>
 		          	<a class="dropdown-item" href="/na-midia">Na mídia</a>
 		          	<a class="dropdown-item" href="/colabore">Colabore</a>
-		          	<a class="dropdown-item" href="/creditos">Créditos</a>
+		          	<!--<a class="dropdown-item" href="/creditos">Créditos</a>-->
 		        </div>
       		</li>
       	</ul>
