Criação da página "Comparação Contextual"

--- a/jekyll/_includes/footer.html
+++ b/jekyll/_includes/footer.html
@@ -63,6 +63,9 @@
             <a href="/graficos/rio-verde">Rio Verde</a>
           </li>
           <li>
+            <a href="/graficos/comparacao">Comparação Contextual</a>
+          </li>
+          <li>
             <a href="/graficos/como-sao-criados">Como são criados?</a>
           </li>
         </ul>
