--- a/jekyll/_includes/navbar.html
+++ b/jekyll/_includes/navbar.html
@@ -20,7 +20,8 @@
 		        	<a class="dropdown-item" href="/graficos/jatai">Jataí</a>
 		          	<a class="dropdown-item" href="/graficos/mineiros">Mineiros</a>
 		          	<a class="dropdown-item" href="/graficos/rio-verde">Rio Verde</a>
-		          	<div class="dropdown-divider"></div>
+					<div class="dropdown-divider"></div>
+					<a class="dropdown-item" href="/graficos/comparacao">Comparação Contextual</a>
 		          	<a class="dropdown-item" href="/graficos/como-sao-criados">Como são criados?</a>
 		        </div>
       		</li>
