Criação dos cards estáticos para cada cidade.

--- a/jekyll/_includes/card-estatistica.html
+++ b/jekyll/_includes/card-estatistica.html
@@ -1,11 +1,17 @@
-<div class="card col-6 col-xs col-sm-3 col-md" style="margin: 0 0 0 0; margin-left: 0.5%; margin-right: 0.5%; padding: 1%; padding-bottom: 0.5%; border: 0 0 0 0; background: {{ include.cor }}; text-align: center;">
-	<div 
-		style="margin: 0 0 0 0; padding: 10% 0 10% 0; border: 0 0 0 0; 
-				font-size: 4vw; text-align: center; font-family: 'Lato', sans-serif;">
-		<strong>{{ include.numero }}</strong>
-	</div>
-	<div style="margin: 0 0 0 0; padding: 0 0 0 0 ; border: 0 0 0 0;
-				font-size: 1.3vw; text-align: center; font-family: 'Lato', sans-serif;">
-		{{ include.categoria }}
+<div 
+	class="mx-lg-2 my-lg-2	mb-lg-0
+		   mx-2 			mb-3
+		" 
+	style="background-color: {{ include.cor }}; width: 180px; height: 72px; padding-left: 20px; padding-top: 10px;">
+	<div class="row">
+		<div class="col text-center d-inline">
+			<i class="{{ include.icone }}" style="font-size: 30px;"></i>
+			<div style="">
+				{{ include.categoria }}
+			</div>
+		</div>
+		<div class="col text-center d-inline" style="font-size: 40px; margin-left: -35px; margin-top: -3px;">
+			{{ include.numero }}
+		</div>
 	</div>
 </div>
