--- a/jekyll/_includes/grafico-resumo.html
+++ b/jekyll/_includes/grafico-resumo.html
@@ -1,6 +1,6 @@
 <div class="container graficos-bg p-5">
 	
-	<h1>Resumo: <strong>{{ include.cidade }}</strong></h1>
+	<h1>Resumo</h1>
 
 	<div class="row">
 		<div class="col-lg-5 col-12">
