--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -1,6 +1,7 @@
+{% load static %}
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
 	<a class="navbar-brand" href="/">
-		<img src="{{ site.baseurl }}/assets/images/logo-navbar.svg" width="30" height="30" class="d-inline-block align-top" alt="">
+		<img src="{% static 'images/logo-navbar.svg' %}" width="30" height="30" class="d-inline-block align-top" alt="">
 		Observatório UFJ Covid-19
 	</a>
   	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
@@ -9,17 +10,17 @@
 
   	<div class="collapse navbar-collapse" id="navbarColor01">
     	<ul class="navbar-nav ml-5">
-      		<li class="nav-item mr-2 {% if page.permalink == "/" %} active {% endif %}">
+      		<li class="nav-item mr-2 active">
         		<a class="nav-link" href="/">Principal</a>
       		</li>
       		<li class="nav-item dropdown">
-		        <a class="nav-link dropdown-toggle mr-2 {% if page.navbar == "graficos" %} active {% endif %}" href="#" id="navbarDropdownGraficos" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+		        <a class="nav-link dropdown-toggle mr-2 active " href="#" id="navbarDropdownGraficos" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 		        	Gráficos
 		        </a>
 		        <div class="dropdown-menu" aria-labelledby="navbarDropdownGraficos">
-		        	<a class="dropdown-item" href="/graficos/jatai">Jataí</a>
-		          	<a class="dropdown-item" href="/graficos/mineiros">Mineiros</a>
-		          	<a class="dropdown-item" href="/graficos/rio-verde">Rio Verde</a>
+		        	<a class="dropdown-item" href="{% url 'core:graficos' cidade="jatai" %}">Jataí</a>
+		          	<a class="dropdown-item" href="{% url 'core:graficos' cidade="mineiros" %}">Mineiros</a>
+		          	<a class="dropdown-item" href="{% url 'core:graficos' cidade="rio_verde" %}">Rio Verde</a>
 					<div class="dropdown-divider"></div>
 					<a class="dropdown-item" href="/graficos/comparacao">Comparação Contextual</a>
 		          	<a class="dropdown-item" href="/graficos/como-sao-criados">Como são criados?</a>
