--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -18,9 +18,9 @@
 		        	Gráficos
 		        </a>
 		        <div class="dropdown-menu" aria-labelledby="navbarDropdownGraficos">
-		        	<a class="dropdown-item" href="{% url 'core:graficos' cidade="jatai" %}">Jataí</a>
-		          	<a class="dropdown-item" href="{% url 'core:graficos' cidade="mineiros" %}">Mineiros</a>
-		          	<a class="dropdown-item" href="{% url 'core:graficos' cidade="rio_verde" %}">Rio Verde</a>
+		        	<a class="dropdown-item" href="{% url 'core:grafico' cidade="jatai" %}">Jataí</a>
+		          	<a class="dropdown-item" href="{% url 'core:grafico' cidade="mineiros" %}">Mineiros</a>
+		          	<a class="dropdown-item" href="{% url 'core:grafico' cidade="rioverde" %}">Rio Verde</a>
 					<div class="dropdown-divider"></div>
 					<a class="dropdown-item" href="/graficos/comparacao">Comparação Contextual</a>
 		          	<a class="dropdown-item" href="/graficos/como-sao-criados">Como são criados?</a>
