Adicionando alteracoes de equipe

--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -22,8 +22,8 @@
 		          	<a class="dropdown-item" href="{% url 'core:grafico' cidade="mineiros" %}">Mineiros</a>
 		          	<a class="dropdown-item" href="{% url 'core:grafico' cidade="rioverde" %}">Rio Verde</a>
 					<div class="dropdown-divider"></div>
-					<a class="dropdown-item" href="/graficos/comparacao">Comparação Contextual</a>
-		          	<a class="dropdown-item" href="/graficos/como-sao-criados">Como são criados?</a>
+					<a class="dropdown-item" href="{% url 'core:comparacao' %}">Comparação Contextual</a>
+		          	<a class="dropdown-item" href="{% url 'core:como-sao-criados' %}">Como são criados?</a>
 		        </div>
       		</li>
       		<li class="nav-item dropdown">
