--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -31,8 +31,8 @@
 		        	Tendências
 		        </a>
 		        <div class="dropdown-menu" aria-labelledby="navbarDropdownTendencias">
-		        	<a class="dropdown-item" href="/tendencias/jatai">Jataí</a>
-		          	<a class="dropdown-item" href="/tendencias/rio-verde">Rio Verde</a>
+		        	<a class="dropdown-item" href="{% url 'core:tendencias' cidade="jatai" %}">Jataí</a>
+		          	<a class="dropdown-item" href="{% url 'core:tendencias' cidade="rioverde" %}">Rio Verde</a>
 		          	<!--<div class="dropdown-divider"></div>
 		          	<a class="dropdown-item" href="/tendencias/como-sao-feitas">Como são criadas?</a>-->
 		        </div>
@@ -41,14 +41,14 @@
         		<a class="nav-link" href="/noticias">Notícias</a>
       		</li>-->
       		<li class="nav-item dropdown">
-		        <a class="nav-link dropdown-toggle mr-2 {% if page.navbar == "sobre" %} active {% endif %}" href="#" id="navbarDropdownConhecaMais" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+		        <a class="nav-link dropdown-toggle mr-2" href="#" id="navbarDropdownConhecaMais" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 		        	Saiba mais
 		        </a>
 		        <div class="dropdown-menu" aria-labelledby="navbarDropdownConhecaMais">
-		        	<a class="dropdown-item" href="/sobre">Sobre</a>
-		          	<a class="dropdown-item" href="/equipe">Equipe</a>
-		          	<a class="dropdown-item" href="/na-midia">Na mídia</a>
-		          	<a class="dropdown-item" href="/colabore">Colabore</a>
+		        	<a class="dropdown-item" href="{% url 'core:sobre' %}">Sobre</a>
+		          	<a class="dropdown-item" href="{% url 'core:equipe' %}">Equipe</a>
+		          	<a class="dropdown-item" href="{% url 'core:na-midia' %}">Na mídia</a>
+		          	<a class="dropdown-item" href="{% url 'core:colabore' %}">Colabore</a>
 		          	<!--<a class="dropdown-item" href="/creditos">Créditos</a>-->
 		        </div>
       		</li>
