Adicionando dados e mapas

--- a/apps/core/templates/base.html
+++ b/apps/core/templates/base.html
@@ -23,6 +23,10 @@
   			</div>
 		</div>
 
+		{% block script %}
+		
+		{% endblock %}
+
 		{% include "partials/base/footer.html" %}
 		{% include "partials/base/scripts.html" %}
 	</body>
