--- a/apps/core/templates/grafico/comparacao.html
+++ b/apps/core/templates/grafico/comparacao.html
@@ -8,7 +8,7 @@
 				<img src="{% static 'images/mapa-comparacao.svg' %}" id="mapa-comparacao" alt="Mapa do Sudoeste Goiano"  style="width: 120%;" />
 			</div>
 			<div class="col-lg-7 col-12 px-5">
-				<div class="grafico" id="comparacao-grafico"></div>
+				<div class="grafico" id="comparacao-grafico" v_goias="{{ goias }}" v_brasil="{{ brasil }}"></div>
 			</div>
 		</div>
 		<div class="row pt-2 pt-lg-0">
