--- a/templates/partials/base/head.html
+++ b/templates/partials/base/head.html
@@ -10,7 +10,7 @@
         gtag('config', 'UA-162516870-1');
     </script>
 
-    <title>{{ page.title }}</title>
+    <title>{{ titulo }}</title>
     <meta property="og:image" content="{% static 'images/thumbnail.png' %}" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://www.deolhonocorona.com" />
