--- a/templates/partials/base/scripts.html
+++ b/templates/partials/base/scripts.html
@@ -14,21 +14,24 @@
   integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" 
   crossorigin="anonymous">
 </script>
-<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 
-<script src="{% static 'js/graficos/buildChart.js' %}"></script>
-<script src="{% static 'js/graficos/geral.js' %}"></script>
-<script src="{% static 'js/graficos/jatai.js' %}"></script>
-<script src="{% static 'js/graficos/mineiros.js' %}"></script>
-<script src="{% static 'js/graficos/rioverde.js' %}"></script>
-<script src="{% static 'js/graficos/comparacao.js' %}"></script>
+<!-- <script src="{% static 'js/graficos/buildChart.js' %}"></script> -->
+<!-- <script src="{% static 'js/graficos/geral.js' %}"></script>
+  <script src="{% static 'js/graficos/jatai.js' %}"></script>
+  <script src="{% static 'js/graficos/mineiros.js' %}"></script>
+  <script src="{% static 'js/graficos/rioverde.js' %}"></script> -->
+{% if script == "comparacao" %}
+  <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+  {% include "grafico/buildChart.html" %}
+  <script src="{% static 'js/graficos/comparacao.js' %}"></script>
+{% endif %}
 
-<script src="{% static 'js/tendencias/buildProjection.js' %}"></script>
+<!-- <script src="{% static 'js/tendencias/buildProjection.js' %}"></script>
 <script src="{% static 'js/tendencias/geral.js' %}"></script>
 <script src="{% static 'js/tendencias/jatai.js' %}"></script>
-<script src="{% static 'js/tendencias/rioverde.js' %}"></script>
+<script src="{% static 'js/tendencias/rioverde.js' %}"></script> -->
 
-<script src="{% static 'js/noticias.js' %}"></script>
+<!-- <script src="{% static 'js/noticias.js' %}"></script> -->
 
 
 <script src="{% static 'js/main.js' %}"></script>
